--- a/webapp/view/SessionList.view.xml
+++ b/webapp/view/SessionList.view.xml
@@ -5,24 +5,27 @@
 			<core:Fragment fragmentName="ssms.view.Header" type="XML"/>
 		</subHeader>
 		<content>
-			<IconTabBar id="ssms-IconTabBar" select="getSessionByStatus" class="sapUiResponsiveContentPadding" expandable="false">
+			<IconTabBar id="ssms-IconTabBar" select="getSessionByStatus" class="sapUiResponsiveContentPadding ssmsSessionList-IconTabBar" expandable="false">
 				<items>
 					<IconTabFilter showAll="true" id="iconTabFilterAll" text="{i18n>TEXT_OWNSESSION_SESSIONS}" key="All">
-						<Table id="ssms_ownsession_Table" inset="false" items="{UserModel1>/}">
+						<Table id="ssmsSessionList-All" inset="false" items="{SessionModel>/}">
 							<columns>
-								<Column width="14em">
+								<Column width="15em">
 									<Text text="{i18n>TEXT_OWNSESSION_TOPIC}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="11em" demandPopin="true">
+									<Text text="{i18n>TEXT_OWNSESSION_OWNER}"/>
+								</Column>
+								<Column width="10em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_CATEGORY}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="9em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_VISIBILITY}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="12em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_TIME}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="10em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_LOCATION}"/>
 								</Column>
 								<Column>
@@ -30,14 +33,15 @@
 								</Column>
 							</columns>
 							<items>
-								<ColumnListItem press="onPressedColumnListItem" class="ssmsColorChangingText" type="Navigation" counter="{UserModel1>id}">
+								<ColumnListItem press="onPressedColumnListItem" class="ssmsColorChangingText" type="Navigation" counter="{SessionModel>id}">
 									<cells>
-										<Text text="{UserModel1>topic}"/>
-										<Text text="{UserModel1>category}"/>
-										<Text text="{path:'UserModel1>visibility',formatter:'.formatter.formatVisibility'}"/>
-										<Text text="{path: 'UserModel1>meetingTime',formatter:'.formatter.formatDateTime'}"/>
-										<Text text="{UserModel1>meetingRoom}"/>
-										<ObjectNumber emphasized="false" number="{UserModel1>status}" state="{path:'UserModel1>status',formatter:'.formatter.formatStatusToColor'}"/>
+										<Text text="{SessionModel>topic}"/>
+										<Text text="{SessionModel>owner}"/>
+										<Text text="{SessionModel>category}"/>
+										<Text text="{path:'SessionModel>visibility',formatter:'.formatter.formatVisibility'}"/>
+										<Text text="{path: 'SessionModel>meetingTime',formatter:'.formatter.formatDateTime'}"/>
+										<Text text="{SessionModel>meetingRoom}"/>
+										<ObjectNumber emphasized="false" number="{SessionModel>status}" state="{path:'SessionModel>status',formatter:'.formatter.formatStatusToColor'}"/>
 									</cells>
 								</ColumnListItem>
 							</items>
@@ -45,21 +49,24 @@
 					</IconTabFilter>
 					<IconTabSeparator/>
 					<IconTabFilter icon="sap-icon://accept" id="iconTabFilterOpen" iconColor="Default" text="{i18n>TEXT_OWNSESSION_OPEN}" key="Open">
-						<Table id="ssms_ownsession_Table1" inset="false" items="{UserModel1>/}">
+						<Table id="ssmsSessionList-Open" inset="false" items="{SessionModel>/}">
 							<columns>
-								<Column width="14em">
+								<Column width="15em">
 									<Text text="{i18n>TEXT_OWNSESSION_TOPIC}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="11em" demandPopin="true">
+									<Text text="{i18n>TEXT_OWNSESSION_OWNER}"/>
+								</Column>
+								<Column width="10em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_CATEGORY}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="9em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_VISIBILITY}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="12em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_TIME}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="10em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_LOCATION}"/>
 								</Column>
 								<Column>
@@ -67,35 +74,39 @@
 								</Column>
 							</columns>
 							<items>
-								<ColumnListItem press="onPressedColumnListItem" class="ssmsColorChangingText" counter="{UserModel1>id}" type="Navigation">
+								<ColumnListItem press="onPressedColumnListItem" class="ssmsColorChangingText" counter="{SessionModel>id}" type="Navigation">
 									<cells>
-										<Text text="{UserModel1>topic}"/>
-										<Text text="{UserModel1>category}"/>
-										<Text text="{path:'UserModel1>visibility',formatter:'.formatter.formatVisibility'}"/>
-										<Text text="{path: 'UserModel1>meetingTime',formatter:'.formatter.formatDateTime'}"/>
-										<Text text="{UserModel1>meetingRoom}"/>
-										<ObjectNumber emphasized="false" number="{UserModel1>status}" state="{path:'UserModel1>status',formatter:'.formatter.formatStatusToColor'}"/>
+										<Text text="{SessionModel>topic}"/>
+										<Text text="{SessionModel>owner}"/>
+										<Text text="{SessionModel>category}"/>
+										<Text text="{path:'SessionModel>visibility',formatter:'.formatter.formatVisibility'}"/>
+										<Text text="{path: 'SessionModel>meetingTime',formatter:'.formatter.formatDateTime'}"/>
+										<Text text="{SessionModel>meetingRoom}"/>
+										<ObjectNumber emphasized="false" number="{SessionModel>status}" state="{path:'SessionModel>status',formatter:'.formatter.formatStatusToColor'}"/>
 									</cells>
 								</ColumnListItem>
 							</items>
 						</Table>
 					</IconTabFilter>
 					<IconTabFilter icon="sap-icon://begin" iconColor="Positive" text="{i18n>TEXT_OWNSESSION_INPROCESS}" key="In Progress">
-						<Table id="ssms_ownsession_Table2" inset="false" items="{UserModel1>/}">
+						<Table id="ssmsSessionList-InProgress" inset="false" items="{SessionModel>/}">
 							<columns>
-								<Column width="14em">
+								<Column width="15em">
 									<Text text="{i18n>TEXT_OWNSESSION_TOPIC}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="11em" demandPopin="true">
+									<Text text="{i18n>TEXT_OWNSESSION_OWNER}"/>
+								</Column>
+								<Column width="10em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_CATEGORY}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="9em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_VISIBILITY}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="12em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_TIME}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="10em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_LOCATION}"/>
 								</Column>
 								<Column>
@@ -103,14 +114,15 @@
 								</Column>
 							</columns>
 							<items>
-								<ColumnListItem press="onPressedColumnListItem" class="ssmsColorChangingText" type="Navigation" counter="{UserModel1>id}">
-									<cells>
-										<Text text="{UserModel1>topic}"/>
-										<Text text="{UserModel1>category}"/>
-										<Text text="{path:'UserModel1>visibility',formatter:'.formatter.formatVisibility'}"/>
-										<Text text="{path: 'UserModel1>meetingTime',formatter:'.formatter.formatDateTime'}"/>
-										<Text text="{UserModel1>meetingRoom}"/>
-										<ObjectNumber emphasized="false" number="{UserModel1>status}" state="{path:'UserModel1>status',formatter:'.formatter.formatStatusToColor'}"/>
+								<ColumnListItem press="onPressedColumnListItem" class="ssmsColorChangingText" type="Navigation" counter="{SessionModel>id}">
+								<cells>
+										<Text text="{SessionModel>topic}"/>
+										<Text text="{SessionModel>owner}"/>
+										<Text text="{SessionModel>category}"/>
+										<Text text="{path:'SessionModel>visibility',formatter:'.formatter.formatVisibility'}"/>
+										<Text text="{path: 'SessionModel>meetingTime',formatter:'.formatter.formatDateTime'}"/>
+										<Text text="{SessionModel>meetingRoom}"/>
+										<ObjectNumber emphasized="false" number="{SessionModel>status}" state="{path:'SessionModel>status',formatter:'.formatter.formatStatusToColor'}"/>
 									</cells>
 								</ColumnListItem>
 							</items>
@@ -118,21 +130,24 @@
 					</IconTabFilter>
 					<IconTabFilter icon="sap-icon://decline" id="iconTabFilterCanceled" iconColor="Critical" text="{i18n>TEXT_OWNSESSION_CANCELED}"
 						key="Cancelled">
-						<Table id="ssms_ownsession_Table3" inset="false" items="{UserModel1>/}">
+						<Table id="ssmsSessionList-Cancelled" inset="false" items="{SessionModel>/}">
 							<columns>
-								<Column width="14em">
+								<Column width="15em">
 									<Text text="{i18n>TEXT_OWNSESSION_TOPIC}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="11em" demandPopin="true">
+									<Text text="{i18n>TEXT_OWNSESSION_OWNER}"/>
+								</Column>
+								<Column width="10em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_CATEGORY}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="9em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_VISIBILITY}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="12em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_TIME}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="10em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_LOCATION}"/>
 								</Column>
 								<Column>
@@ -140,35 +155,39 @@
 								</Column>
 							</columns>
 							<items>
-								<ColumnListItem press="onPressedColumnListItem" class="ssmsColorChangingText" type="Navigation" counter="{UserModel1>id}">
+								<ColumnListItem press="onPressedColumnListItem" class="ssmsColorChangingText" type="Navigation" counter="{SessionModel>id}">
 									<cells>
-										<Text text="{UserModel1>topic}"/>
-										<Text text="{UserModel1>category}"/>
-										<Text text="{path:'UserModel1>visibility',formatter:'.formatter.formatVisibility'}"/>
-										<Text text="{path: 'UserModel1>meetingTime',formatter:'.formatter.formatDateTime'}"/>
-										<Text text="{UserModel1>meetingRoom}"/>
-										<ObjectNumber emphasized="false" number="{UserModel1>status}" state="{path:'UserModel1>status',formatter:'.formatter.formatStatusToColor'}"/>
+										<Text text="{SessionModel>topic}"/>
+										<Text text="{SessionModel>owner}"/>
+										<Text text="{SessionModel>category}"/>
+										<Text text="{path:'SessionModel>visibility',formatter:'.formatter.formatVisibility'}"/>
+										<Text text="{path: 'SessionModel>meetingTime',formatter:'.formatter.formatDateTime'}"/>
+										<Text text="{SessionModel>meetingRoom}"/>
+										<ObjectNumber emphasized="false" number="{SessionModel>status}" state="{path:'SessionModel>status',formatter:'.formatter.formatStatusToColor'}"/>
 									</cells>
 								</ColumnListItem>
 							</items>
 						</Table>
 					</IconTabFilter>
 					<IconTabFilter icon="sap-icon://complete" iconColor="Negative" id="iconTabFilterClosed" text="{i18n>TEXT_OWNSESSION_CLOSED}" key="Closed">
-						<Table id="ssms_ownsession_Table4" inset="false" items="{UserModel1>/}">
+						<Table id="ssmsSessionList-Completed" inset="false" items="{SessionModel>/}">
 							<columns>
-								<Column width="14em">
+								<Column width="15em">
 									<Text text="{i18n>TEXT_OWNSESSION_TOPIC}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="11em" demandPopin="true">
+									<Text text="{i18n>TEXT_OWNSESSION_OWNER}"/>
+								</Column>
+								<Column width="10em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_CATEGORY}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="9em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_VISIBILITY}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="12em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_TIME}"/>
 								</Column>
-								<Column width="14em" demandPopin="true">
+								<Column width="10em" demandPopin="true">
 									<Text text="{i18n>TEXT_OWNSESSION_LOCATION}"/>
 								</Column>
 								<Column>
@@ -176,14 +195,15 @@
 								</Column>
 							</columns>
 							<items>
-								<ColumnListItem press="onPressedColumnListItem" class="ssmsColorChangingText" type="Navigation" counter="{UserModel1>id}">
+								<ColumnListItem press="onPressedColumnListItem" class="ssmsColorChangingText" type="Navigation" counter="{SessionModel>id}">
 									<cells>
-										<Text text="{UserModel1>topic}"/>
-										<Text text="{UserModel1>category}"/>
-										<Text text="{path:'UserModel1>visibility',formatter:'.formatter.formatVisibility'}"/>
-										<Text text="{path: 'UserModel1>meetingTime',formatter:'.formatter.formatDateTime'}"/>
-										<Text text="{UserModel1>meetingRoom}"/>
-										<ObjectNumber emphasized="false" number="{UserModel1>status}" state="{path:'UserModel1>status',formatter:'.formatter.formatStatusToColor'}"/>
+										<Text text="{SessionModel>topic}"/>
+										<Text text="{SessionModel>owner}"/>
+										<Text text="{SessionModel>category}"/>
+										<Text text="{path:'SessionModel>visibility',formatter:'.formatter.formatVisibility'}"/>
+										<Text text="{path: 'SessionModel>meetingTime',formatter:'.formatter.formatDateTime'}"/>
+										<Text text="{SessionModel>meetingRoom}"/>
+										<ObjectNumber emphasized="false" number="{SessionModel>status}" state="{path:'SessionModel>status',formatter:'.formatter.formatStatusToColor'}"/>
 									</cells>
 								</ColumnListItem>
 							</items>
