--- a/webapp/css/ownedSession.css
+++ b/webapp/css/ownedSession.css
@@ -1,7 +1,7 @@
-.sapMITBAll .sapMITBCount {
+.ssmsOwnedSession-IconTabBar .sapMITBAll .sapMITBCount {
     font-size: 2.5rem ;
 }
-.sapMITBAll .sapMITBText{
+.ssmsOwnedSession-IconTabBar .sapMITBAll .sapMITBText{
     padding-top: 1rem;
 }
 .ssmsColorChangingText .sapMObjectNumberStatusWarning {
