add digital  on icons in owned session

--- a/webapp/view/OwnedSession.view.xml
+++ b/webapp/view/OwnedSession.view.xml
@@ -83,7 +83,7 @@
 							</items>
 						</Table>
 					</IconTabFilter>
-					<IconTabFilter icon="sap-icon://begin" iconColor="Positive" text="{i18n>TEXT_OWNSESSION_INPROCESS}" key="In Progress">
+					<IconTabFilter icon="sap-icon://begin" iconColor="Positive" id="iconTabFilterInProgress" text="{i18n>TEXT_OWNSESSION_INPROCESS}" key="In Progress">
 						<Table id="ssmsOwnsession-InProgress" inset="false" items="{SessionModel>/}">
 							<columns>
 								<Column width="14em">
