add paginator in the view of owned session

--- a/webapp/css/ownedSession.css
+++ b/webapp/css/ownedSession.css
@@ -16,3 +16,6 @@
 .ssmsColorChangingText .sapMObjectNumberStatusSuccess {
 	 color: green;
 }
+.ssmsOwnedSession-Paginator{
+ margin-left: 35rem;	
+}
